Details
-
Bug
-
Status: Closed (View Workflow)
-
Minor
-
Resolution: Fixed
-
10.1(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL), 10.8(EOL)
-
None
Description
Start server with
--plugin-load-add=file_key_management --plugin-load-add=example_key_management --innodb-encrypt-tables --innodb-encryption-threads=1
|
otherwise defaults.
Doesn't matter whether file-key-management-filename is provided or not.
|
Error log after startup |
2016-04-19 20:38:43 139999079106432 [ERROR] Plugin 'file_key_management' registration as a ENCRYPTION failed.
|
2016-04-19 20:38:43 139999079106432 [Note] InnoDB: Using mutexes to ref count buffer pool pages
|
2016-04-19 20:38:43 139999079106432 [Note] InnoDB: InnoDB: !!!!!!!! UNIV_DEBUG switched on !!!!!!!!!
|
2016-04-19 20:38:43 139999079106432 [Note] InnoDB: InnoDB: !!!!!!!! UNIV_SYNC_DEBUG switched on !!!!!!!!!
|
2016-04-19 20:38:43 139999079106432 [Note] InnoDB: The InnoDB memory heap is disabled
|
2016-04-19 20:38:43 139999079106432 [Note] InnoDB: Mutexes and rw_locks use GCC atomic builtins
|
2016-04-19 20:38:43 139999079106432 [Note] InnoDB: Memory barrier is not used
|
2016-04-19 20:38:43 139999079106432 [Note] InnoDB: Compressed tables use zlib 1.2.8
|
2016-04-19 20:38:43 139999079106432 [Note] InnoDB: Using Linux native AIO
|
2016-04-19 20:38:43 139999079106432 [Note] InnoDB: Using generic crc32 instructions
|
2016-04-19 20:38:43 139999079106432 [Note] InnoDB: Initializing buffer pool, size = 128.0M
|
2016-04-19 20:38:43 139999079106432 [Note] InnoDB: Completed initialization of buffer pool
|
2016-04-19 20:38:43 139999079106432 [Note] InnoDB: Highest supported file format is Barracuda.
|
2016-04-19 20:38:45 139999079106432 [Note] InnoDB: 128 rollback segment(s) are active.
|
2016-04-19 20:38:45 139999079106432 [Note] InnoDB: Waiting for purge to start
|
2016-04-19 20:38:45 139999079106432 [Note] InnoDB: Percona XtraDB (http://www.percona.com) 5.6.28-76.1 started; log sequence number 1616819
|
2016-04-19 20:38:45 139999079106432 [Note] InnoDB: Creating #1 thread id 139998336632576 total threads 1.
|
2016-04-19 20:38:45 139998361810688 [Note] InnoDB: Dumping buffer pool(s) not yet started
|
2016-04-19 20:38:45 139999079106432 [Note] Plugin 'FEEDBACK' is disabled.
|
2016-04-19 20:38:45 139999079106432 [Note] Server socket created on IP: '::'.
|
2016-04-19 20:38:45 139999079106432 [Note] /bld/10.1/bin/mysqld: ready for connections.
|
Version: '10.1.13-MariaDB-debug' socket: '/bld/10.1/data/tmp/mysql.sock' port: 3306 Source distribution
|
Run
SELECT COUNT(*) FROM INFORMATION_SCHEMA.INNODB_TABLESPACES_ENCRYPTION; |
|
Stack trace from 10.1 commit 1cf852d874b0e82ebfa3854300abaacd04d3eb01 |
2016-04-19 20:31:09 139814445774592 [ERROR] InnoDB: Used key_id 1 can't be found from key file.
|
2016-04-19 20:31:09 7f29165ff700 InnoDB: Assertion failure in thread 139814445774592 in file fil0crypt.cc line 994
|
InnoDB: Failing assertion: new_state->key_version != ENCRYPTION_KEY_VERSION_INVALID
|
 |
#5 0x00007f2940b0e538 in abort () from /lib64/libc.so.6
|
#6 0x000056211447fa76 in fil_crypt_get_key_state (new_state=0x7f29165fee00) at /src/10.1/storage/xtradb/fil/fil0crypt.cc:994
|
#7 0x00005621144803e4 in fil_crypt_space_needs_rotation (state=0x7f29165fee10, key_state=0x7f29165fee00, recheck=0x7f29165fedeb) at /src/10.1/storage/xtradb/fil/fil0crypt.cc:1339
|
#8 0x0000562114480a61 in fil_crypt_find_space_to_rotate (key_state=0x7f29165fee00, state=0x7f29165fee10, recheck=0x7f29165fedeb) at /src/10.1/storage/xtradb/fil/fil0crypt.cc:1587
|
#9 0x00005621144820a5 in fil_crypt_thread (arg=0x0) at /src/10.1/storage/xtradb/fil/fil0crypt.cc:2260
|
#10 0x00007f2942a4f0a4 in start_thread () from /lib64/libpthread.so.0
|
#11 0x00007f2940bbd04d in clone () from /lib64/libc.so.6
|
Attachments
Issue Links
- relates to
-
MDEV-9909 Enable plugins for MTR
-
- Closed
-
-
MDEV-12863 No table can be created after second encryption plugin attempted to load
-
- Closed
-
-
MDEV-28280 Multiple key management plugins refuse to load with generic error
-
- Open
-